--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -1,48 +1,65 @@
-<span *ngFor="let category of selectedCategory; let c = index">
-  <ng-container *ngIf="category.materialList.length">
-    <mat-accordion>
-      <div #myele *ngIf="!isSearching ? true : !category.allNull">
-        <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel mat-expansion-panel-header-not-expand mat-expansion-panel-header-wrapper bom-qty-page" [expanded]="true">
-          <mat-expansion-panel-header class="background-color-skyblue row">
-            <div class="col-xs-6 text-left p-l-25">
-              <mat-panel-title class="color-white">
-                {{ category.groupName }}
-              </mat-panel-title>
-            </div>
-            <div class="col-xs-3 text-left">
-              <mat-panel-title class="color-white">
-                Unit
-              </mat-panel-title>
-            </div>
-            <div class="col-xs-3"></div>
-          </mat-expansion-panel-header>
-          <div class="background-color-bom-sub-category p-0" *ngFor="let subcategory of category.materialList; let sc = index">
-            <div class="row" *ngIf="!subcategory.isNull">
-              <div class="col-xs-3 text-left p-t-10">
-                <span class="limitcharacter-myMaterialName p-l-40" matTooltip="{{ subcategory.materialName }}">{{ subcategory.materialName }}</span>
-              </div>
-              <div class="col-xs-3 p-t-10">
-                <span class="text-semi-bold">
-                  <span class="p-r-5">{{ subcategory.tradeName }}</span>
-                </span>
-              </div>
-              <div class="col-xs-3 text-left p-t-10">
-                <span>{{ subcategory.materialUnit }}</span>
-              </div>
-              <div class="col-xs-1 text-right p-t-10">
-                <button class="material-icons cursor button-background main-color" matTooltip="Edit" (click)="openEditDialog(c, sc)">
-                  edit
-                </button>
-              </div>
-              <div class="col-xs-1 p-t-10">
-                <a href="javascript:void(0)" class="width-15-px cursor-pointer" matTooltip="Delete" (click)="onDelete(c, sc)">
-                  <img src="../../../../assets/images/delete-button.png" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </mat-expansion-panel>
+<ng-container *ngIf="selectedCategory">
+  <div *ngIf="!selectedCategory.length; else elseBlock" class="parent p-t-20 min-height">
+    <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+      <div class="add-user-img">
+        <img src="../../../../assets/images/addMyMatrial.svg" alt="Project Logo" />
+        <div>
+          <p>
+            There is no custom material added in the project. <br />
+            Please add material either from the above or BOM.
+          </p>
+        </div>
       </div>
-    </mat-accordion>
-  </ng-container>
-</span>
+    </div>
+  </div>
+  <ng-template #elseBlock>
+    <span *ngFor="let category of selectedCategory; let c = index">
+      <ng-container *ngIf="category.materialList.length">
+        <mat-accordion>
+          <div #myele *ngIf="!isSearching ? true : !category.allNull">
+            <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel mat-expansion-panel-header-not-expand mat-expansion-panel-header-wrapper bom-qty-page" [expanded]="true">
+              <mat-expansion-panel-header class="background-color-skyblue row">
+                <div class="col-xs-6 text-left p-l-25">
+                  <mat-panel-title class="color-white">
+                    {{ category.groupName }}
+                  </mat-panel-title>
+                </div>
+                <div class="col-xs-3 text-left">
+                  <mat-panel-title class="color-white">
+                    Unit
+                  </mat-panel-title>
+                </div>
+                <div class="col-xs-3"></div>
+              </mat-expansion-panel-header>
+              <div class="background-color-bom-sub-category p-0" *ngFor="let subcategory of category.materialList; let sc = index">
+                <div class="row" *ngIf="!subcategory.isNull">
+                  <div class="col-xs-3 text-left p-t-10">
+                    <span class="limitcharacter-myMaterialName p-l-40" matTooltip="{{ subcategory.materialName }}">{{ subcategory.materialName }}</span>
+                  </div>
+                  <div class="col-xs-3 p-t-10">
+                    <span class="text-semi-bold">
+                      <span class="p-r-5">{{ subcategory.tradeName }}</span>
+                    </span>
+                  </div>
+                  <div class="col-xs-3 text-left p-t-10">
+                    <span>{{ subcategory.materialUnit }}</span>
+                  </div>
+                  <div class="col-xs-1 text-right p-t-10">
+                    <button class="material-icons cursor button-background main-color" matTooltip="Edit" (click)="openEditDialog(c, sc)">
+                      edit
+                    </button>
+                  </div>
+                  <div class="col-xs-1 p-t-10">
+                    <a href="javascript:void(0)" class="width-15-px cursor-pointer" matTooltip="Delete" (click)="onDelete(c, sc)">
+                      <img src="../../../../assets/images/delete-button.png" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </mat-expansion-panel>
+          </div>
+        </mat-accordion>
+      </ng-container>
+    </span>
+  </ng-template>
+</ng-container>
