--- a/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
+++ b/src/app/shared/dialogs/edit-my-material/edit-my-material.component.html
@@ -30,7 +30,21 @@
             <div class="col-xs-2 text-right p-l-0 p-r-0">
               <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
                 <mat-select placeholder="*Unit" formControlName="materialUnit">
-                  <mat-option *ngFor="let unit of materialUnit" [value]="unit">
+                  <div class="display-flex">
+                    <input
+                      class="p-l-10 p-b-5"
+                      matInput
+                      type="search"
+                      placeholder="Search Unit"
+                      [(ngModel)]="searchUnit"
+                      [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()"
+                    />
+                    <button mat-button mat-icon-button>
+                      <mat-icon>search</mat-icon>
+                    </button>
+                  </div>
+                  <mat-option *ngFor="let unit of materialUnit | SearchPipe: searchUnit" [value]="unit">
                     <span>
                       {{ unit }}
                     </span>
