rfq supplier bid upload and view images functionality && vendor rating IMT-1567 fixes

--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -255,3 +255,15 @@
     top: -17px;
   }
 }
+
+.image-heading{
+  text-align: left;
+  margin-left: 8px;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.supplier-img-heading{
+  width: 95%;
+  margin-left: 38px;
+}
