--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -64,7 +64,7 @@
       <!-- Supplier Name Column -->
       <ng-container matColumnDef="Supplier Name">
         <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-        <td mat-cell *matCellDef="let element">
+        <td mat-cell *matCellDef="let element" class="pt-2">
           <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label" class="example-radio-group"
             formControlName="supplier">
             <mat-radio-button class="example-radio-button" [value]="element" [checked]="element.checked">
@@ -72,7 +72,11 @@
               {{ element.user_d }}
             </mat-radio-button>
           </mat-radio-group>
-          {{ element.supplier_name }}
+          <span class="supplier-name">{{ element.supplier_name }}</span>
+          <span class="d-block supplier-rates rfq-supplier-rates">
+            <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
+          </span>
+
         </td>
       </ng-container>
 
