--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -98,7 +98,7 @@
                 </span>
               </th>
 
-              <th class="font-size14" colspan="2">
+              <th class="font-size14" colspan="3">
                 <span *ngIf="projects.addressLine1">
                   {{ projects.addressLine1 }}
                 </span>
@@ -125,15 +125,32 @@
             <ng-container *ngFor="let material of projects.materialList">
               <tr matSort class="material-rfq-supplies">
                 <td class="font-size14 limited-character">
-                  <span>
-                    {{ material.materialName }}
-                  </span>
+                  <span>{{ material.materialName }}</span>
+                  <!-- Upload Image Modal Link -->
+                  <div class="add-edit-image d-block">
+                    <a href="javascript:void(0)" class="orange-text" (click)="uploadImage(material, 'supplier')">Add/Edit Image</a>
+                  </div>
                 </td>
                 <td class="font-size14">
                   Requested Quantity: {{ material.materialQuantity }}
                   {{ material.materialUnit }}
                 </td>
                 <td class="font-size14">Required Date : {{ material.fullfilmentDate | date: "dd-MMM-yyy" }}</td>
+                
+                <!-- View image modal link -->
+                <td class="font-size14 text-center">
+                  <div *ngIf="material?.documentList?.length" class="images-lists"
+                    (click)="viewAllImages(material.materialId)">
+                    <ng-container *ngFor="let img of material.documentList; let i = index">
+                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                    </ng-container>
+                  </div>
+      
+                  <ng-container *ngIf="!material?.documentList">
+                    <img src="assets/images/default-material.png" alt="default-material" class="img-fluid default-image" />
+                  </ng-container>
+                </td>
+
                 <ng-container *ngIf="rfqSupplierDetailList.isInternational === 1">
                   <td class="font-size14">
                     <ng-container *ngIf="
@@ -194,7 +211,7 @@
                   <th class="font-size14">Rate <ng-container *ngIf="rfqSupplierDetailList.baseCurrencyCode">
                       ({{ rfqSupplierDetailList.baseCurrencyCode }})</ng-container>
                   </th>
-                  <th class="font-size14 text-align-right">Total Amount <ng-container
+                  <th class="font-size14 text-align-right" colspan="2">Total Amount <ng-container
                       *ngIf="rfqSupplierDetailList.baseCurrencyCode">
                       ({{ rfqSupplierDetailList.baseCurrencyCode }})</ng-container>
                   </th>
@@ -216,7 +233,7 @@
                     </mat-form-field>
                   </td>
 
-                  <td class="text-align-right">{{ brand.brandRate * material.materialQuantity | number: "1.2-2" }}</td>
+                  <td class="text-align-right" colspan="2">{{ brand.brandRate * material.materialQuantity | number: "1.2-2" }}</td>
 
                   <td class="text-align-right">
                     <span *ngIf="!brand.brandRate">0.00</span>
