--- a/src/app/shared/dialogs/upload-image/upload-image.component.html
+++ b/src/app/shared/dialogs/upload-image/upload-image.component.html
@@ -27,6 +27,9 @@
 
         <div class="col-md-6">
 
+          <p class="image-heading supplier-img-heading">Images uploaded by you</p>
+
+          <!-- If previous images exists -->
           <ng-container *ngIf="prevDocumentList?.length">
             <div class="upload-image-info mb-3 d-flex align-items-center justify-content-between"
               *ngFor="let file of prevDocumentList; let i = index">
@@ -39,15 +42,12 @@
                 <img src="assets/images/delete-button.png" class="mr-2 cursor-pointer" (click)="removeImage(file.documentDesc)" />
                 <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
                   (click)="downloadImage(file.documentShortUrl, file.documentUrl)" />
-                <!-- <i class="fa fa-trash fa-lg orange-text mr-2 cursor-pointer"
-                  (click)="removeImage(file.documentDesc)"></i>
-                <i class="fa fa-download fa-lg orange-text cursor-pointer"
-                  (click)="downloadImage(file.documentShortUrl, file.documentUrl)"></i> -->
               </div>
 
             </div>
           </ng-container>
 
+          <!-- If new image uploads -->
           <div class="upload-image-info mb-3 d-flex align-items-center justify-content-between"
             *ngFor="let file of documentList; let i = index">
             <div class="image-info d-flex align-items-center">
@@ -62,6 +62,26 @@
             </div>
 
           </div>
+
+          <!-- For Supplier Bid page (html will render if contractor images exists) -->
+          <ng-container *ngIf="contractorImagesList?.length">
+            <div class="upload-image-info mb-3">
+              <hr/>
+              <p class="image-heading">Images uploaded by contractor</p>
+              <div *ngFor="let file of contractorImagesList; let i = index" class="d-flex align-items-center justify-content-between">
+                <div class="image-info d-flex align-items-center">
+                  <img [src]="file.documentThumbnailUrl" alt="" class="img-fluid thumbnail-img">
+                  <span class="ml-2">{{ file.documentDesc }}</span>
+                </div>
+  
+                <div class="image-actions d-flex align-items-center">
+                  <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
+                    (click)="downloadImage(file.documentShortUrl, file.documentUrl)" />
+                </div>
+              </div>
+            </div>
+          </ng-container>
+          
         </div>
       </div>
 
