--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -35,7 +35,13 @@
     <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
       <mat-step stepControl="stepOne">
         <ng-template matStepLabel>Project & Material</ng-template>
-        <app-rfq-project-materials (updatedRfq)="getMaterial($event)" #projectrMaterial [existingRfq]="rfqData"> </app-rfq-project-materials>
+        <app-rfq-project-materials
+          *ngIf="this.currentIndex === 0 ? (this.prevIndex === 0 ? true : rfqData) : false"
+          (updatedRfq)="getMaterial($event)"
+          #projectrMaterial
+          [existingRfq]="rfqData"
+        >
+        </app-rfq-project-materials>
       </mat-step>
       <mat-step stepControl="stepSecond">
         <ng-template matStepLabel>Add Quantity & Makes{{ currentIndex }}</ng-template>
