--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -73,7 +73,21 @@
               <mat-form-field class="border-select width-90 mat-form-field-flex-mm-padding">
                 <mat-label>Trade*</mat-label>
                 <mat-select formControlName="trade">
-                  <mat-option *ngFor="let trade of tradesList" [value]="trade">
+                  <div class="display-flex">
+                    <input
+                      class="p-l-10 p-b-5"
+                      matInput
+                      type="search"
+                      placeholder="Search Trade"
+                      [(ngModel)]="searchTrade"
+                      [ngModelOptions]="{standalone: true}"
+                      (keydown)="$event.stopPropagation()"
+                    />
+                    <button mat-button matSuffix mat-icon-button>
+                      <mat-icon>search</mat-icon>
+                    </button>
+                  </div>
+                  <mat-option *ngFor="let trade of tradesList | SearchPipe: searchTrade:['tradeName']" [value]="trade">
                     {{ trade.tradeName }}
                   </mat-option>
                 </mat-select>
