--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -1,80 +1,98 @@
-<div class="row">
-  <div class="col-xs-6 p-t-10">
+<div class="row" [ngClass]="isMobile ? 'm-podr' : '' ">
+  <div class="col-xs-6 p-t-10 m-itm" [ngClass]="isMobile ? 'mb-2' : '' ">
     <mat-form-field class="input-search-padding-zero border-input">
-      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" (keydown)="$event.stopPropagation()" />
+      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText"
+        [ngModelOptions]="{standalone: true}" (keydown)="$event.stopPropagation()" />
       <button mat-button matSuffix mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
   </div>
-  <div class="col-xs-6 text-right">
-    <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
+  <div class="col-md-6 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'pt-0 pb-0 pl-0 pr-2' : '' ">
+    <span (click)="selectCurrency()"
+      class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select
+      Currency</span>
     <span class="p-r-5">
-      <span class="m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer add-supplier-btn" (click)="openSupplierDialog(this.rfqData.rfqProjectsList[0].projectId)">
-        <span class="font-size20">
+      <span class="m-b-5 font-bold color-main cursor-pointer add-supplier-btn"
+        (click)="openSupplierDialog(this.rfqData.rfqProjectsList[0].projectId)"
+        [ngClass]="isMobile ? 'text-decoration-underline ml-1 mr-1' : 'm-r-10 m-l-15' ">
+        <span [ngClass]="isMobile ? 'font-size14' : 'font-size20' ">
           +
         </span>
-        <span>
+        <span [ngClass]="isMobile ? 'font-size12' : '' ">
           Supplier
         </span>
       </span>
     </span>
     <span class="p-r-5">
-      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="changeRfq()" type="button">Back</button>
+      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white"
+        (click)="changeRfq()" type="button" [ngClass]="isMobile ? 'po-sm-btn' : '' ">Back</button>
     </span>
     <!-- (click)="navigateToUploadPage()" -->
     <span>
-      <button mat-raised-button matStepperNext [disabled]="this.supplierCounter === 0" (click)="reviewRfq()" class="main-background-color main-button color-white">
+      <button mat-raised-button matStepperNext [disabled]="this.supplierCounter === 0" (click)="reviewRfq()"
+        class="main-background-color main-button color-white" [ngClass]="isMobile ? 'po-sm-btn' : '' ">
         Next
       </button>
     </span>
   </div>
-</div>
 
-<div class="col-xs-12 p-t-10 p-b-20 text-right" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
-  <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
-    <span class="font-size-vary-grn color-grey">
-      <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
-      {{ rfqData.rfqCurrency.exchangeCurrencyName }}
+  <div class="col-md-12 col-xs-6 p-b-20 text-right m-itm"
+    *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null"
+    [ngClass]="isMobile ? 'pt-3' : 'p-t-10' ">
+    <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'font-size12 mcrncy pt-2 pb-2' : 'p-t-10 p-b-10' ">
+      <span class="font-size-vary-grn color-grey">
+        <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag"
+          [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
+        {{ rfqData.rfqCurrency.exchangeCurrencyName }}
+      </span>
+      <span class="p-l-5"> = </span>
+      <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqData.rfqCurrency.exchangeValue }} </span>
+      <span class="p-l-5 color-grey">
+        <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag"
+          [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
+        {{ rfqData.rfqCurrency.primaryCurrencyName }}
+      </span>
     </span>
-    <span class="p-l-5"> = </span>
-    <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqData.rfqCurrency.exchangeValue }} </span>
-    <span class="p-l-5 color-grey">
-      <img width="25px" *ngIf="rfqData.rfqCurrency.primaryCurrencyFlag" [src]="rfqData.rfqCurrency.primaryCurrencyFlag" />
-      {{ rfqData.rfqCurrency.primaryCurrencyName }}
-    </span>
-  </span>
+  </div>
 </div>
 
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
-  <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
-    <ng-container matColumnDef="Supplier Name">
-      <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-      <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="pt-2">
-        <mat-checkbox #ch [checked]="element.checked" (change)="valueChange(element, ch, i)"> </mat-checkbox>
-        <span class="supplier-name">{{ element.supplier_name }}</span>
-        <span class="d-block supplier-rates rfq-supplier-rates">
-          <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
-        </span>
-      </td>
-    </ng-container>
 
-    <ng-container matColumnDef="Email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
+  <div class="example-container mat-elevation-z8">
 
-    <ng-container matColumnDef="Phone No.">
-      <th mat-header-cell *matHeaderCellDef>Phone No.</th>
-      <td mat-cell *matCellDef="let element">{{ element.contact_no }}</td>
-    </ng-container>
+    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms"
+      class="mat-elevation-z4 col-sm-12 mt-3">
+      <ng-container matColumnDef="Supplier Name">
+        <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
+        <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="pt-2">
+          <mat-checkbox #ch [checked]="element.checked" (change)="valueChange(element, ch, i)"> </mat-checkbox>
+          <span class="supplier-name ml-3 position-absolute">{{ element.supplier_name }}</span>
+          <span class="d-block supplier-rates rfq-supplier-rates min-w-150px">
+            <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
+          </span>
+        </td>
+      </ng-container>
 
-    <!-- <ng-container matColumnDef="PAN No.">
+      <ng-container matColumnDef="Email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Phone No.">
+        <th mat-header-cell *matHeaderCellDef>Phone No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.contact_no }}</td>
+      </ng-container>
+
+      <!-- <ng-container matColumnDef="PAN No.">
       <th mat-header-cell *matHeaderCellDef>PAN No.</th>
       <td mat-cell *matCellDef="let element">{{ element.pan }}</td>
     </ng-container> -->
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <tr mat-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+  </div>
+
 </form>
