--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="finalRfq" [formGroup]="form" (ngSubmit)="submit()">
   <div class="page-start-point">
-    <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <div class="min-height parent" [ngClass]="isMobile ? 'pl-2 pr-2 pb-2' : 'p-l-20 p-r-20 p-b-20' ">
       <div class="row m-b-10">
         <div class="col-md-12">
           <div class="row">
@@ -15,9 +15,9 @@
             </div>
           </div>
           <!-- first row -->
-          <div class="row m-b-10">
-            <div class="col-xs-3">
-              <mat-form-field class="border-input">
+          <div class="row m-b-10" [ngClass]="isMobile ? 'm-podr4' : '' ">
+            <div class="col-md-3 col-xs-7 m-itm">
+              <mat-form-field class="border-input" [ngClass]="isMobile ? 'd-block' : '' ">
                 <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFQ Name*" />
               </mat-form-field>
             </div>
@@ -30,9 +30,9 @@
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
             </div> -->
-            <div class="col-xs-6 date-dialog-add-edit p-t-5">
+            <div class="col-md-6 col-xs-5 date-dialog-add-edit p-t-5 m-itm">
               <!-- end date -->
-              <mat-form-field class="border-input">
+              <mat-form-field class="border-input" [ngClass]="isMobile ? 'd-block' : '' ">
                 <mat-label>RFQ End Date*</mat-label>
                 <!-- <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span> -->
                 <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate"
@@ -53,8 +53,9 @@
                 </button>
               </div> -->
 
-            <div class="col-xs-3 p-l-0 p-t-20 p-b-20 text-right"
-              *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
+            <div class="col-md-3 col-xs-12 p-l-0 p-t-20 text-right m-itm"
+              *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null"
+              [ngClass]="isMobile ? 'p-b-10' : 'p-b-20' ">
               <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
                 <span class="font-size-vary-grn color-grey">
                   <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag"
@@ -100,8 +101,9 @@
             </div> -->
           </div>
           <!-- second row -->
-          <div class="row m-b-10 main-flex">
-            <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList">
+          <div class="row main-flex" [ngClass]="!isMobile ? 'm-b-10' : '' ">
+            <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList"
+              [ngClass]="isMobile ? 'mb-3 pl-0 pr-0' : '' ">
               <mat-card class="w-100">
                 <div class="col-md-12 text-bold">
                   <label for="company" class="mb-0">{{ supplier.supplier_name }}</label>
@@ -126,8 +128,8 @@
 
       <mat-accordion>
         <ng-template ngFor let-project [ngForOf]="checkedList" let-i="index">
-          <mat-expansion-panel class="myPanel" [expanded]="true">
-            <mat-expansion-panel-header>
+          <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : '' ">
+            <mat-expansion-panel-header [ngClass]="isMobile ? 'font-size12 pt-4 pb-4' : '' ">
               <mat-panel-title>
                 {{ project.projectName }}
                 <a href="javascript:void(0)" class="main-color p-l-15">
@@ -139,61 +141,70 @@
                 </a>
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12" class="rfq-final-step">
-              <ng-container matColumnDef="Material Name">
-                <th mat-header-cell *matHeaderCellDef>Material Name</th>
-                <td mat-cell *matCellDef="let element">
-                  {{ element.materialName }}
-                </td>
-              </ng-container>
 
-              <ng-container matColumnDef="Required Date">
-                <th mat-header-cell class="text-center" *matHeaderCellDef>Required Date</th>
-                <td mat-cell class="text-center" *matCellDef="let element">
-                  {{ element.fullfilmentDate | date: "dd-MMM-yyy" }}
-                </td>
-              </ng-container>
+            <div class="example-container mat-elevation-z8">
 
-              <ng-container matColumnDef="Quantity">
-                <th mat-header-cell class="text-center w-15" *matHeaderCellDef>Quantity</th>
-                <td mat-cell class="text-center w-15" *matCellDef="let element">
-                  {{ element.quantity }}<span class="p-l-5">{{ element.materialUnit }}</span>
-                </td>
-              </ng-container>
+              <table mat-table [dataSource]="project.projectMaterialList" class="rfq-final-step">
+                <ng-container matColumnDef="Material Name">
+                  <th mat-header-cell *matHeaderCellDef>Material Name</th>
+                  <td mat-cell *matCellDef="let element">
+                    {{ element.materialName }}
+                  </td>
+                </ng-container>
 
-              <ng-container matColumnDef="Makes">
-                <th mat-header-cell *matHeaderCellDef class="text-center w-40">Makes</th>
-                <td mat-cell *matCellDef="let element" class="text-center w-40">
-                  <ng-container *ngIf="element.makes">
-                    <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
-                      {{ make }}
-                    </span>
-                  </ng-container>
-                </td>
-              </ng-container>
+                <ng-container matColumnDef="Required Date">
+                  <th mat-header-cell class="text-center" *matHeaderCellDef>Required Date</th>
+                  <td mat-cell class="text-center" *matCellDef="let element">
+                    {{ element.fullfilmentDate | date: "dd-MMM-yyy" }}
+                  </td>
+                </ng-container>
 
-              <!-- View image modal link -->
-              <ng-container matColumnDef="Attached Images">
-                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
-                  Attached Images
-                </th>
-                <td class="text-align-center" mat-cell *matCellDef="let element">
-                  <div *ngIf="element?.documentList?.length" class="images-lists" (click)="viewAllImages(element.materialId)">
-                    <ng-container *ngFor="let img of element.documentList; let i = index">
-                      <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
+                <ng-container matColumnDef="Quantity">
+                  <th mat-header-cell class="text-center w-15" *matHeaderCellDef>Quantity</th>
+                  <td mat-cell class="text-center w-15" *matCellDef="let element">
+                    {{ element.quantity }}<span class="p-l-5">{{ element.materialUnit }}</span>
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Makes">
+                  <th mat-header-cell *matHeaderCellDef class="text-center w-40">Makes</th>
+                  <td mat-cell *matCellDef="let element" class="text-center w-40">
+                    <ng-container *ngIf="element.makes">
+                      <span class="brand-view-style m-r-5" *ngFor="let make of element.makes">
+                        {{ make }}
+                      </span>
                     </ng-container>
-                  </div>
-      
-                  <ng-container *ngIf="!element?.documentList">
-                    <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
-                  </ng-container>
-                  
-                </td>
-              </ng-container>
+                  </td>
+                </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
+                <!-- View image modal link -->
+                <ng-container matColumnDef="Attached Images">
+                  <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                    Attached Images
+                  </th>
+                  <td class="text-align-center" mat-cell *matCellDef="let element">
+                    <div *ngIf="element?.documentList?.length" class="images-lists"
+                      (click)="viewAllImages(element.materialId)">
+                      <ng-container *ngFor="let img of element.documentList; let i = index">
+                        <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image"
+                          *ngIf="i < 3" />
+                      </ng-container>
+                    </div>
+
+                    <ng-container *ngIf="!element?.documentList">
+                      <img src="assets/images/project-default-image.png" alt="default-material"
+                        class="img-fluid default-image" />
+                    </ng-container>
+
+                  </td>
+                </ng-container>
+
+                <tr mat-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+              </table>
+
+            </div>
+
           </mat-expansion-panel>
         </ng-template>
       </mat-accordion>
