--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -354,3 +354,10 @@ s .validTill {
 .mpo-mh{
   height: 30px;
 }
+
+.str{
+  &:before{
+    font-size: 1rem !important;
+    padding: .3rem .1rem !important;
+  }
+}
