rfq - download already upload image, view bid functionality complete, added caption in view modal

--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -172,13 +172,13 @@
                         </div>
 
                         <!-- Attached Image Column individual Supplier -->
-                        <div class="mat-cell maxwidth-10">
-                          <!-- <div *ngIf="supplier?.documentList?.length" class="images-lists"
-                            (click)="viewAllImages(material.materialId)">
+                        <div class="mat-cell maxwidth-10 view-bid-images-preview">
+                          <div *ngIf="supplier?.documentList?.length" class="images-lists"
+                            (click)="viewAllImages(material.materialId, supplier.supplierId)">
                             <ng-container *ngFor="let img of supplier.documentList; let i = index">
                               <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image" *ngIf="i < 3" />
                             </ng-container>
-                          </div> -->
+                          </div>
               
                           <ng-container *ngIf="!supplier?.documentList">
                             <img src="assets/images/default-material.png" alt="default-material" class="img-fluid default-image" />
