--- a/src/app/shared/dialogs/view-image/view-image.component.html
+++ b/src/app/shared/dialogs/view-image/view-image.component.html
@@ -13,6 +13,11 @@
             <div class="picsum-img-wrapper">
               <img [src]=image.documentUrl alt="Random first slide" class="img-fluid">
             </div>
+
+            <div class="carousel-caption">
+              <h4>{{ image.documentDesc }}</h4>
+              <!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
+            </div>
           </ng-template>
         </ng-container>
       </ngb-carousel>
