--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -102,6 +102,10 @@ div.limited-character.bom {
       left: 23px;
       top: -17px;
     }
+
+    &:nth-child(4), &:nth-child(5){
+      display: none;
+    }
   }
 }
 
@@ -146,8 +150,8 @@ div.limited-character.bom {
     text-shadow: none;
   }
 
-  .carousel-indicators{
-    display: none;
+  h4{
+    text-shadow: 0 0 10px #000;
   }
 }
 
