--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -294,3 +294,29 @@
   }
 
 }
+
+.view-bid-images-preview .images-lists{
+  position: relative;
+  .attached-image {
+    position: relative;
+
+    &:first-child{
+      top: 20px;
+      left: 10px;
+    }
+
+    &:nth-child(2){
+      left: 16px;
+      top: -21px;
+    }
+
+    &:nth-child(3){
+      left: 23px;
+      top: -60px;
+    }
+
+    &:nth-child(4), &:nth-child(5){
+      display: none;
+    }
+  }
+}
