IMT-1627, IMT-1625, IMT-1622, IMT-1508, IMT-1620, IMT-1619, IMT-1609, IMT-1603, IMT-1602, IMT-1597

--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="col-xs-6 col-md-9 p-t-10 text-right">
-        <mat-form-field class="t-0 width-15 label-adjust">
+        <mat-form-field class="t-0 width-15 label-adjust bom-select-menus">
           <mat-label><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">Create</span>
           </mat-label>
@@ -38,7 +38,7 @@
             </mat-optgroup>
           </mat-select>
         </mat-form-field>
-        <mat-form-field class="t-0 width-16 label-adjust">
+        <mat-form-field class="t-0 width-16 label-adjust bom-select-menus">
           <mat-label><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">+Add/Edit</span>
           </mat-label>
