--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -286,7 +286,7 @@
                       </span>
                     </span>
                   </th>
-                  <th class="font-size14 text-align-right">
+                  <th class="font-size14 text-align-right" colspan="2">
                     Total Amount
                     <ng-container *ngIf="rfqSupplierDetailList.rfqCurrency; else bsCrCode">
                       ({{ rfqSupplierDetailList.rfqCurrency.exchangeCurrencyName }})</ng-container>
@@ -326,7 +326,7 @@
                     </ng-template>
                   </td>
 
-                  <td class="text-align-right">
+                  <td class="text-align-right" colspan="2">
                     <span *ngIf="
                         brand.brandRate &&
                           taxAndCostData &&
