--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -152,6 +152,7 @@ div.limited-character.bom {
 
   h4{
     text-shadow: 0 0 10px #000;
+    word-break: break-word;
   }
 }
 
@@ -161,15 +162,23 @@ div.limited-character.bom {
 }
 
 .image-info{
+  width: 75%;
   .thumbnail-img{
     width: 30px;
     height: 30px;
     object-fit: cover;
     border-radius: 2px;
+    border: 1px solid #bbbaba;
+  }
+
+  span{
+    text-align: left;
+    word-break: break-word;
   }
 }
 
 .image-actions{
+  width: 15%;
   .fa{
     text-decoration: none !important;
   }
@@ -248,4 +257,16 @@ div.limited-character.bom {
 
 .red-border {
   border: 2px dotted #ef7c7f;
+}
+
+.carousel-indicators li,
+.carousel-control-prev-icon,
+.carousel-control-next-icon{
+  cursor: pointer;
+}
+
+.bom-select-menus{
+  .mat-select-trigger, .mat-select-placeholder{
+    height: 45px;
+  }
 }
