--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -177,11 +177,26 @@
                             <span class="p-r-5">{{ selectedBaseCurrency && selectedBaseCurrency.currencyCode }}</span>
                           </span>
                         </mat-select-trigger>
-                        <mat-option *ngFor="let currency of currencyList | SearchPipe: searchCurrency:['currency', 'currencyCode']" [value]="currency"
-                          ><span
-                            ><img class="width-17 p-r-10" [src]="currency.imageUrl" alt="" />
-                            <span class="p-r-5">{{ currency.currency }}</span>
-                          </span>
+                        <mat-option *ngFor="let currency of currencyList | SearchPipe: searchCurrency:['currency', 'currencyCode']" [value]="currency">
+                          <!-- <span
+                              ><img class="width-17 p-r-10" [src]="currency.imageUrl" alt="" />
+                              <span class="p-r-5">{{ currency.currency }}</span>
+                            </span> -->
+                          <div class="display-flex justify-content-space-between">
+                            <div class="display-flex">
+                              <div class="p-t-0">
+                                <img [src]="currency.imageUrl" width="35px" />
+                              </div>
+                              <span class="p-l-10">
+                                {{ currency.currency }}
+                              </span>
+                            </div>
+                            <div>
+                              <span>
+                                {{ currency.currencyCode }}
+                              </span>
+                            </div>
+                          </div>
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
