--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -375,7 +375,7 @@
                     </span>
                   </ng-container>
                 </td>
-                <td class="text-align-right">
+                <td class="text-align-right" colspan="2">
                   <button mat-button matRipple class="btn btn-link p-0 main-color text-decoration-underline"
                     (click)="openTaxesCostsDialog('otherCost')">Add other costs</button>
                 </td>
