--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -16,7 +16,8 @@
           </p>
         </div>
       </div>
-      <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()" class="main-background-color main-button color-white">
+      <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()"
+        class="main-background-color main-button color-white">
         Add First Project
       </button>
     </div>
@@ -33,14 +34,16 @@
         </mat-form-field>
       </div>
       <div class="text-right col-xs-5 add-project-btn p-t-10">
-        <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
+        <button mat-raised-button class="main-background-color main-button color-white demo-title"
+          (click)="addProject()">
           + Add Project
         </button>
       </div>
     </div>
     <!-- end fix part -->
-    <div *ngFor="let projDetails of allProjects | SearchPipe: searchText:['projectName']">
-      <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails"> </card-layout>
+    <div class="mb-3" *ngFor="let projDetails of allProjects | SearchPipe: searchText:['projectName']">
+      <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails">
+      </card-layout>
     </div>
   </div>
 </div>
