--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="background-white-color">
-  <mat-toolbar-row>
+  <mat-toolbar-row class="header-border-bottom">
     <button class="hamburger" fxShow="true" fxHide.gt-sm (click)="openMenu()" mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
