--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -338,7 +338,7 @@ body,
   }
   .page-start-point {
     //padding-top: 65px !important;
-    padding-top: 90px !important;
+    // padding-top: 90px !important;
     height: 100%;
     overflow-x: hidden;
   }
