--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -46,6 +46,10 @@ button.active {
   font-weight: 600;
 }
 
+.header-border-bottom{
+  border-bottom: 1px solid #c3c3c3;
+}
+
 .mat-menu-content:not(:empty) {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -153,7 +157,7 @@ button.active {
 
 .side-navbar-header {
   padding: 15px 5px 15px 15px;
-  background: #efefefd1;
+  background: #f7f7f7;
 
   .user-name {
     padding-left: 15px;
@@ -172,25 +176,32 @@ button.active {
 }
 
 .header-links{
+  color:#0c1224;
+  font-weight: normal;
   width: 100%;
   text-align: left !important;
   line-height: 46px !important;
-  font-size: 16px;
+  font-size: 14px;
+  padding-left:15px !important;
   &:hover {
-    background-color: #0c1224;
+    // background-color: #0c1224;
+    background-color: #f7f7f7;
   }
 }
 
 .header-links.active{
-  background-color: #0c1224;
-  border-left: 5px solid #f47721;
+  // background-color: #0c1224;
+  color:#0c1224;
+  padding-left:10px !important;
+  // border-left: 5px solid #f47721;
+  border-left: 5px solid #2496bb;
 }
 
 .sidebar-navigation{
     height: 100%;
     position: fixed;
-    width: 16%;
-    top: 0%;
+    // width: 16%;
+    top: 0;
     z-index: 99;
     padding-top: 65px;
 }
@@ -218,21 +229,65 @@ button.active {
 }
 
 .sideNavigation{
-  position: relative;
+  // position: relative;
   width: 100%;
   height: 100%;
 }
 
+.sidenav{
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+}
+
 .no-collapsed{
   left: 205px;
+  transition: left .2s ease-in-out;
 }
 
 .collapsed{
-  left: 44px;
+  left: 50px;
+  transition: left .2s ease-in-out;
 }
 
 .changeWidth{
   max-width: 96%;
   flex: 0 0 96%;
   margin-left: 4%;
+}
+
+.c-w{
+  width:60px;
+  overflow-x: hidden;
+  transition: width .2s ease-in-out;
+}
+
+.f-w{
+  width:220px;
+  overflow-x: hidden;
+  transition: width .2s ease-in-out;
+}
+
+.side-logo{
+  background-color: #f2f2f2;
+  display: block;
+  margin-bottom: 30px;
+}
+.sl{
+  padding: 17px 10px;
+}
+.ml{
+  padding: 17px 5px;
+  img{
+    max-width: 40px;
+  }
+}
+
+@media only screen and (max-width: 599px) {
+
+  .changeWidth{
+    max-width: 100%;
+    flex: 0 0 100%;
+    margin-left: 0%;
+  }
+
 }
